[gd_scene load_steps=12 format=3 uid="uid://4b2celqpy2e"]

[ext_resource type="Script" path="res://scripts/tinyExplosion.gd" id="1_wavxf"]
[ext_resource type="Texture2D" uid="uid://cmptl1grknjcj" path="res://sprites/particles/DroneParts4.png" id="2_uume6"]
[ext_resource type="Texture2D" uid="uid://bhshya2eev7mk" path="res://sprites/particles/BreadCrumb.png" id="3_b8tha"]
[ext_resource type="Texture2D" uid="uid://dptlxw6n0tv4p" path="res://sprites/particles/Smoke.png" id="7_1ex6p"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_nqr1d"]
light_mode = 2

[sub_resource type="Curve" id="Curve_38w3t"]
max_value = 2.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.490654, 1.98077), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_1jwl6"]
colors = PackedColorArray(1, 0, 0, 1, 1, 1, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_w3tbt"]
radius = 8.43274

[sub_resource type="Animation" id="Animation_ocgch"]
resource_name = "Explode"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3.5, 3.5), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_nuxj5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_edyal"]
_data = {
"Explode": SubResource("Animation_ocgch"),
"RESET": SubResource("Animation_nuxj5")
}

[node name="Explosion" type="Node2D"]
z_index = 2
texture_filter = 1
material = SubResource("CanvasItemMaterial_nqr1d")
scale = Vector2(0.75, 0.75)
script = ExtResource("1_wavxf")

[node name="BigChunks" type="CPUParticles2D" parent="."]
light_mask = 6
use_parent_material = true
rotation = -1.5708
emitting = false
amount = 4
lifetime = 2.0
one_shot = true
explosiveness = 1.0
texture = ExtResource("2_uume6")
direction = Vector2(0, 0)
spread = 90.0
gravity = Vector2(0, 250)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
angular_velocity_min = -1000.0
angular_velocity_max = 1000.0
angle_min = -180.0
angle_max = 180.0

[node name="BreadCrumbs" type="CPUParticles2D" parent="."]
light_mask = 6
use_parent_material = true
rotation = -1.5708
emitting = false
amount = 3
lifetime = 2.0
one_shot = true
explosiveness = 1.0
texture = ExtResource("3_b8tha")
direction = Vector2(0, 0)
spread = 90.0
gravity = Vector2(0, 250)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
angular_velocity_min = -1000.0
angular_velocity_max = 1000.0
angle_min = -180.0
angle_max = 180.0

[node name="Fireball2" type="CPUParticles2D" parent="."]
light_mask = 6
use_parent_material = true
emitting = false
amount = 20
one_shot = true
speed_scale = 1.5
explosiveness = 0.5
texture = ExtResource("7_1ex6p")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 30.0
scale_amount_min = 0.5
scale_amount_max = 0.5
scale_amount_curve = SubResource("Curve_38w3t")
color_ramp = SubResource("Gradient_1jwl6")

[node name="Fireball3" type="CPUParticles2D" parent="."]
light_mask = 6
use_parent_material = true
emitting = false
amount = 20
one_shot = true
speed_scale = 2.0
explosiveness = 0.5
texture = ExtResource("7_1ex6p")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 30.0
scale_amount_min = 0.5
scale_amount_max = 0.5
scale_amount_curve = SubResource("Curve_38w3t")
color_ramp = SubResource("Gradient_1jwl6")

[node name="Explosion" type="Area2D" parent="."]
position = Vector2(0, 1.68085e-05)
collision_layer = 0
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion"]
position = Vector2(-4.85064e-12, 0)
rotation = 1.5708
shape = SubResource("CircleShape2D_w3tbt")

[node name="Animate" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_edyal")
}
autoplay = "Explode"

[connection signal="area_entered" from="Explosion" to="." method="_on_explosion_area_entered"]
[connection signal="animation_finished" from="Animate" to="." method="_on_animate_animation_finished"]
